--- a/cours.html
+++ b/cours.html
@@ -241,14 +241,7 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
         <div class="cell cc"><div class="pill" data-pid="SBI3C"><span class="pcode">SBI3C</span><span class="pname">Biologie</span></div></div>
         <div class="cell-empty"></div>
       </div>
-      <!-- Row 2: empty -->
-      <div class="pathway-row no-border tight">
-        <div class="cell-empty"></div>
-        <div class="cell-empty"></div>
-        <div class="cell-empty"></div>
-        <div class="cell-empty"></div>
-      </div>
-      <!-- Row 3: SNC1W + SNC2P drop down here, SCH4C in col4 -->
+      <!-- Row 2: SNC1W + SNC2P drop down here, SCH4C in col4 -->
       <div class="pathway-row no-border tight">
         <div class="cell cc"><div class="pill" data-pid="SNC1W_c"><span class="pcode">SNC1W</span><span class="pname">Sciences</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="SNC2P"><span class="pcode">SNC2P</span><span class="pname">Sciences</span></div></div>
@@ -670,6 +663,7 @@ const ARROW_DEFS = {
     ['SBI3U','SBI4U','#1976d2'],
     ['SCH3U','SCH4U','#1976d2'],
     ['SPH3U','SPH4U','#1976d2'],
+    ['SNC2D','SES4U','#1976d2'],
     ['SNC1W_c','SNC2P','#388e3c'],
     // SNC2P fans to SBI3C, SCH4C, SPH4C — trunk stops before SBI3C column to avoid overlap
     ['SNC2P', ['SBI3C','SCH4C','SPH4C'], '#388e3c'],
