--- a/cours.html
+++ b/cours.html
@@ -659,11 +659,10 @@ const ARROW_DEFS = {
   sciences: [
     ['SNC1W','SNC2D','#1976d2'],
     // SNC2D fans out to three 11e courses — drawn as one trunk + three branches
-    ['SNC2D', ['SBI3U','SCH3U','SPH3U'], '#1976d2'],
+    ['SNC2D', ['SBI3U','SCH3U','SPH3U','SES4U'], '#1976d2'],
     ['SBI3U','SBI4U','#1976d2'],
     ['SCH3U','SCH4U','#1976d2'],
     ['SPH3U','SPH4U','#1976d2'],
-    ['SNC2D','SES4U','#1976d2'],
     ['SNC1W_c','SNC2P','#388e3c'],
     // SNC2P fans to SBI3C, SCH4C, SPH4C — trunk stops before SBI3C column to avoid overlap
     ['SNC2P', ['SBI3C','SCH4C','SPH4C'], '#388e3c'],
