--- a/cours.html
+++ b/cours.html
@@ -152,7 +152,7 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
             <div class="litem"><span class="lcode">D</span><span class="ldesc">Théorique</span></div>
             <div class="litem"><span class="lcode">O</span><span class="ldesc">Ouvert</span></div>
             <div class="litem"><span class="lcode">U</span><span class="ldesc">Pré-Universitaire</span></div>
-            <div class="litem"><span class="lcode">C</span><span class="ldesc">Pré-Collégiale</span></div>
+            <div class="litem"><span class="lcode">C</span><span class="ldesc">Pré-Collégial</span></div>
             <div class="litem"><span class="lcode">M</span><span class="ldesc">Mixte</span></div>
             <div class="litem"><span class="lcode">W</span><span class="ldesc">Cours de départ</span></div>
             <div class="litem"><span class="lcode">L</span><span class="ldesc">Niveau essentiel</span></div>
@@ -231,9 +231,9 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
         <div class="cell cu"><div class="pill" data-pid="SES4U"><span class="pcode">SES4U</span><span class="pname">Sciences de la Terre</span></div></div>
       </div>
 
-      <!-- Pré-Collégiale -->
+      <!-- Pré-Collégial -->
       <div class="path-spacer"></div>
-      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-c"><i class="bi bi-building me-1"></i>Pré-Collégiale</span></div></div>
+      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-c"><i class="bi bi-building me-1"></i>Pré-Collégial</span></div></div>
       <!-- Row 1: SBI3C only -->
       <div class="pathway-row no-border">
         <div class="cell-empty"></div>
@@ -278,20 +278,12 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
         <div class="cell cu"><div class="pill" data-pid="FRA4U"><span class="pcode">FRA4U</span><span class="pname">Français</span></div></div>
       </div>
       <div class="path-spacer"></div>
-      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-c"><i class="bi bi-building me-1"></i>Pré-Collégiale</span></div></div>
+      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-c"><i class="bi bi-building me-1"></i>Pré-Collégial</span></div></div>
       <div class="pathway-row no-border">
         <div class="cell cc"><div class="pill" data-pid="FRL1W_c"><span class="pcode">FRL1W</span><span class="pname">Français</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="FRA2P"><span class="pcode">FRA2P</span><span class="pname">Français</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="FRA3C"><span class="pcode">FRA3C</span><span class="pname">Français</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="FRA4C"><span class="pcode">FRA4C</span><span class="pname">Français</span></div></div>
-      </div>
-      <div class="path-spacer"></div>
-      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-o"><i class="bi bi-globe me-1"></i>Optionnel</span></div></div>
-      <div class="pathway-row no-border">
-        <div class="cell-empty"></div>
-        <div class="cell-empty"></div>
-        <div class="cell co"><div class="pill" data-pid="LWSBD"><span class="pcode">LWSBD</span><span class="pname">Espagnol</span></div></div>
-        <div class="cell-empty"></div>
       </div>
     </div>
   </div>
@@ -309,7 +301,7 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
       <svg class="pathway-svg" id="svg-anglais"></svg>
       <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-u"><i class="bi bi-mortarboard-fill me-1"></i>Pré-Universitaire</span></div></div>
       <div class="pathway-row no-border">
-        <div class="cell cu"><div class="pill" data-pid="EAE1D"><span class="pcode">EAE1D</span><span class="pname">English</span></div></div>
+        <div class="cell cu"><div class="pill" data-pid="EAE1W"><span class="pcode">EAE1W</span><span class="pname">English</span></div></div>
         <div class="cell cu"><div class="pill" data-pid="EAE2D"><span class="pcode">EAE2D</span><span class="pname">English</span></div></div>
         <div class="cell cu"><div class="pill" data-pid="EAE3U"><span class="pcode">EAE3U</span><span class="pname">English</span></div></div>
         <div class="cell cu"><div class="pill" data-pid="EAE4U"><span class="pcode">EAE4U</span><span class="pname">English</span></div></div>
@@ -321,20 +313,12 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
         <div class="cell cu"><div class="pill" data-pid="EAC4U"><span class="pcode">EAC4U</span><span class="pname">Writers Craft</span></div></div>
       </div>
       <div class="path-spacer"></div>
-      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-c"><i class="bi bi-building me-1"></i>Pré-Collégiale</span></div></div>
+      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-c"><i class="bi bi-building me-1"></i>Pré-Collégial</span></div></div>
       <div class="pathway-row no-border">
-        <div class="cell cc"><div class="pill" data-pid="EAE1D_c"><span class="pcode">EAE1D</span><span class="pname">English</span></div></div>
+        <div class="cell cc"><div class="pill" data-pid="EAE1W_c"><span class="pcode">EAE1W</span><span class="pname">English</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="EAE2P"><span class="pcode">EAE2P</span><span class="pname">English</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="EAE3C"><span class="pcode">EAE3C</span><span class="pname">English</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="EAE4C"><span class="pcode">EAE4C</span><span class="pname">English</span></div></div>
-      </div>
-      <div class="path-spacer"></div>
-      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-o"><i class="bi bi-globe me-1"></i>Ouvert</span></div></div>
-      <div class="pathway-row no-border">
-        <div class="cell co"><div class="pill" data-pid="EANAO"><span class="pcode">EANAO</span><span class="pname">Anglais</span></div></div>
-        <div class="cell co"><div class="pill" data-pid="EANBO"><span class="pcode">EANBO</span><span class="pname">Anglais débutant</span></div></div>
-        <div class="cell-empty"></div>
-        <div class="cell-empty"></div>
       </div>
     </div>
   </div>
@@ -371,7 +355,7 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
         <div class="cell cu"><div class="pill" data-pid="MDM4U"><span class="pcode">MDM4U</span><span class="pname">Gestion des données</span></div></div>
       </div>
       <div class="path-spacer"></div>
-      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-c"><i class="bi bi-building me-1"></i>Pré-Collégiale</span></div></div>
+      <div class="pathway-row"><div class="pathway-label-row"><span class="pbadge pb-c"><i class="bi bi-building me-1"></i>Pré-Collégial</span></div></div>
       <div class="pathway-row no-border">
         <div class="cell cc"><div class="pill" data-pid="MTH1W_c"><span class="pcode">MTH1W</span><span class="pname">Mathématiques</span></div></div>
         <div class="cell cc"><div class="pill" data-pid="MPM2P"><span class="pcode">MPM2P</span><span class="pname">Mathématiques</span></div></div>
@@ -670,13 +654,11 @@ const ARROW_DEFS = {
   francais: [
     ['FRL1W_u','FRA2D','#1976d2'],['FRA2D','FRA3U','#1976d2'],['FRA3U','FRA4U','#1976d2'],
     ['FRL1W_c','FRA2P','#388e3c'],['FRA2P','FRA3C','#388e3c'],['FRA3C','FRA4C','#388e3c'],
-    ['EANAO','EANBO','#e65100'],
   ],
   anglais: [
-    ['EAE1D','EAE2D','#1976d2'],['EAE2D','EAE3U','#1976d2'],['EAE3U','EAE4U','#1976d2'],
+    ['EAE1W','EAE2D','#1976d2'],['EAE2D','EAE3U','#1976d2'],['EAE3U','EAE4U','#1976d2'],
     ['EAE3U','EAC4U','#1976d2'],
-    ['EAE1D_c','EAE2P','#388e3c'],['EAE2P','EAE3C','#388e3c'],['EAE3C','EAE4C','#388e3c'],
-    ['EANAO','EANBO','#e65100'],
+    ['EAE1W_c','EAE2P','#388e3c'],['EAE2P','EAE3C','#388e3c'],['EAE3C','EAE4C','#388e3c'],
   ],
   maths: [
     ['MTH1W','MDM2D','#1976d2'],['MDM2D','MCR3U','#1976d2'],['MCR3U','MCV4U','#1976d2'],
