--- a/cours.html
+++ b/cours.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8"/>
-<script data-gage-theme-init="true">(function(){try{var t=localStorage.getItem("gage-theme");if(!t){t=(window.matchMedia&&window.matchMedia("(prefers-color-scheme: dark)").matches)?"dark":"light";}if(t==="dark"){document.documentElement.classList.add("dark-mode");}}catch(e){}})();</script>
+<meta charset="utf-8"/><script data-gage-theme-init="true">(function(){try{var t=localStorage.getItem("gage-theme");if(!t){t=(window.matchMedia&&window.matchMedia("(prefers-color-scheme: dark)").matches)?"dark":"light";}if(t==="dark"){document.documentElement.classList.add("dark-mode");}}catch(e){}})();</script>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Nos Cours | École secondaire Gaétan-Gervais</title>
+<meta content="" name="description"/>
+<meta content="" name="keywords"/>
 <link href="assets/img/favicon.png" rel="icon"/>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:wght@400;600;700;800&display=swap" rel="stylesheet"/>
+<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"/>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"/>
 <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
 <link href="assets/vendor/aos/aos.css" rel="stylesheet"/>
+<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"/>
+<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 <link href="assets/css/main.css" rel="stylesheet"/>
 <style>
 .cours-section { padding: 40px 20px 60px; }
@@ -116,20 +122,25 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
 <main class="main">
 
 <div class="page-title" data-aos="fade">
-  <div class="heading"><div class="container">
-    <div class="row d-flex justify-content-center text-center">
-      <div class="col-lg-8">
-        <div style="margin-bottom:12px;"><i class="bi bi-book-fill" style="font-size:52px;color:var(--accent-color);"></i></div>
-        <h1>Nos Cours</h1>
-        <p class="mb-0">Explorez les cours offerts de la 7<sup>e</sup> à la 12<sup>e</sup> année.</p>
-      </div>
-    </div>
-  </div></div>
-  <nav class="breadcrumbs"><div class="container"><ol>
-    <li><a href="/ESGAGE/index.html">Accueil</a></li>
-    <li><a href="/ESGAGE/academique.html">Académique</a></li>
-    <li class="current">Cours</li>
-  </ol></div></nav>
+<div class="heading">
+<div class="container">
+<div class="row d-flex justify-content-center text-center">
+<div class="col-lg-8">
+<h1>Nos Cours</h1>
+<p class="mb-0">Explorez les cours offerts de la 7<sup>e</sup> à la 12<sup>e</sup> année.</p>
+</div>
+</div>
+</div>
+</div>
+<nav class="breadcrumbs">
+<div class="container">
+<ol>
+<li><a href="/ESGAGE/index.html">Accueil</a></li>
+<li><a href="/ESGAGE/academique.html">Académique</a></li>
+<li class="current">Cours</li>
+</ol>
+</div>
+</nav>
 </div>
 
 <!-- LEGEND -->
@@ -622,6 +633,9 @@ html.dark-mode .pb-e { background:rgba(123,31,162,.18); color:#ce93d8; }
 <div id="preloader"></div>
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
+<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 <script src="assets/js/main.js"></script>
 <script>
 // ── Subject tab switching ──────────────────────────────────────────────────
@@ -670,9 +684,10 @@ const ARROW_DEFS = {
     // MCR3U fans to MCV4U, MHF4U, MDM4U
     ['MCR3U', ['MCV4U','MHF4U','MDM4U'], '#1976d2'],
     // Pré-collégial: simple chain left to right
-    ['MTH1W_c','MPM2P','#388e3c'],['MPM2P','MCF3M','#388e3c'],['MCF3M','MCT4C','#388e3c'],
-    // MCT4C → MHF4U: route from top of MCT4C up to top of MHF4U
-    ['MCT4C','MHF4U','#388e3c','ttt'],
+    ['MTH1W_c','MPM2P','#388e3c'],['MPM2P','MCF3M','#388e3c'],['MCF3M',['MCT4C','MDM4U'],'#388e3c'],
+
+    // MCT4C → MHF4U: sticks out right past column then curves back up
+    ['MCT4C','MHF4U','#388e3c','stick'],
   ],
   eps: [
     ['PAL1O','PAL2O','#e65100'],['PAL2O','PAL3O','#e65100'],['PAL3O','PAL4O','#e65100'],
@@ -730,7 +745,7 @@ function makePath(svg, d, color) {
   p.setAttribute('stroke-width', '2');
   p.setAttribute('fill', 'none');
   p.setAttribute('stroke-opacity', '0.75');
-  p.setAttribute('marker-end', `url(#arrow-${safeId})`);
+  // no arrowhead
   svg.appendChild(p);
 }
 
@@ -763,22 +778,7 @@ function drawArrows(subjectId) {
   // Build arrowhead markers for every unique colour
   const svgDefs = document.createElementNS('http://www.w3.org/2000/svg','defs');
   const colors = [...new Set(defs.map(d => d[2]))];
-  colors.forEach(color => {
-    const safeId = color.replace('#','c');
-    const marker = document.createElementNS('http://www.w3.org/2000/svg','marker');
-    marker.setAttribute('id',          'arrow-' + safeId);
-    marker.setAttribute('viewBox',     '0 0 8 8');
-    marker.setAttribute('refX',        '7');
-    marker.setAttribute('refY',        '4');
-    marker.setAttribute('markerWidth', '6');
-    marker.setAttribute('markerHeight','6');
-    marker.setAttribute('orient',      'auto');
-    const head = document.createElementNS('http://www.w3.org/2000/svg','path');
-    head.setAttribute('d',    'M0,0 L8,4 L0,8 Z');
-    head.setAttribute('fill', color);
-    marker.appendChild(head);
-    svgDefs.appendChild(marker);
-  });
+  // No arrowhead markers needed
   svg.appendChild(svgDefs);
 
   defs.forEach(([fromId, toIds, color, flag]) => {
@@ -802,8 +802,28 @@ function drawArrows(subjectId) {
       if (flag === 'ttt') {
         const x1 = from.right,  y1 = from.top;
         const x2 = to.right,    y2 = to.top;
-        const cy = Math.min(y1, y2) - 20; // curve rises above both pills
+        const cy = Math.min(y1, y2) - 20;
         makePath(svg, `M${x1},${y1} C${x1},${cy} ${x2},${cy} ${x2},${y2}`, color);
+        return;
+      }
+      // rtu = right-then-up: exits right edge of source, curves up and left to left edge of target
+      if (flag === 'rtu') {
+        const x1 = from.right, y1 = from.midY;
+        const x2 = to.left,    y2 = to.midY;
+        // Go right to align with target column, then curve up
+        const cx1 = x2 - 20;
+        makePath(svg, `M${x1},${y1} C${cx1},${y1} ${cx1},${y2} ${x2},${y2}`, color);
+        return;
+      }
+      // stick = sticks out right past the column then curves back up to target right edge
+      if (flag === 'stick') {
+        const x1   = from.right, y1 = from.midY;
+        const x2   = to.right,   y2 = to.midY;
+        const stub  = x1 + 32;  // how far right it sticks out
+        makePath(svg,
+          `M${x1},${y1} C${stub},${y1} ${stub},${y2} ${x2},${y2}`,
+          color
+        );
         return;
       }
 
